--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,8 +8,23 @@ packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+fastapi = "^0.104.1"
+uvicorn = {extras = ["standard"], version = "^0.24.0"}
+sqlmodel = "^0.0.14"
+asyncpg = "^0.29.0"
+alembic = "^1.12.1"
+pydantic-settings = "^2.1.0"
+python-dotenv = "^1.0.0"
+slowapi = "^0.1.9"
+resend = "^0.7.0"
+httpx = "^0.25.2"
 
 [tool.poetry.group.dev.dependencies]
+ruff = "^0.1.7"
+black = "^23.11.0"
+pytest = "^7.4.3"
+pytest-asyncio = "^0.21.1"
+pre-commit = "^3.6.0"
 
 [build-system]
 requires = ["poetry-core"]
