Implements comprehensive environment variable setup with validation, documentation, and development templates.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,30 +1,131 @@
-# Database Configuration
+# =============================================================================
+# ULTRA CIVIC BACKEND ENVIRONMENT VARIABLES
+# =============================================================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to version control - it contains sensitive information
+
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+# PostgreSQL database connection string using asyncpg driver
+# Format: postgresql+asyncpg://username:password@host:port/database
+# Development: Use local PostgreSQL instance
+# Production: Use Neon PostgreSQL connection string
 DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/ultracivic
 
-# Debug Mode
+# =============================================================================
+# APPLICATION CONFIGURATION
+# =============================================================================
+# Enable debug mode for development (shows detailed error messages)
+# SECURITY: Always set to false in production
 DEBUG=false
 
-# Blockchain & Web3 Configuration
+# =============================================================================
+# BLOCKCHAIN & WEB3 CONFIGURATION
+# =============================================================================
+# Alchemy API key for Ethereum Sepolia testnet access
+# Get from: https://dashboard.alchemy.com/
 ALCHEMY_API_KEY=your_alchemy_api_key_here
+
+# Alchemy Sepolia RPC URL (includes your API key)
+# Format: https://eth-sepolia.g.alchemy.com/v2/YOUR_API_KEY
 ALCHEMY_SEPOLIA_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_API_KEY
+
+# Thirdweb secret key for secure transaction execution
+# Get from: https://thirdweb.com/dashboard/settings/api-keys
+# Used for sending $PR tokens from treasury to users
 THIRDWEB_SECRET_KEY=your_thirdweb_secret_key_here
+
+# Ultra Civic treasury wallet address (holds $PR tokens)
+# Must be a valid Ethereum address starting with 0x
+# This wallet will send $PR tokens to users after successful retirement
 TREASURY_WALLET_ADDRESS=0x1234567890123456789012345678901234567890
+
+# $PR token contract address on Sepolia testnet
+# The ERC-20 token contract that users receive as rewards
 PR_TOKEN_CONTRACT_ADDRESS=0x1234567890123456789012345678901234567890
 
-# Email Configuration
+# =============================================================================
+# EMAIL CONFIGURATION
+# =============================================================================
+# Resend API key for sending email notifications
+# Get from: https://resend.com/api-keys
+# Used for alerting when token transfers fail
 RESEND_API_KEY=your_resend_api_key_here
+
+# Email address to receive system alerts and notifications
+# Should be monitored for critical system issues
 ALERT_EMAIL=paco@ultracivic.com
 
-# API Configuration
+# =============================================================================
+# API & SECURITY CONFIGURATION
+# =============================================================================
+# Frontend URL for CORS configuration
+# Development: http://localhost:3000
+# Production: https://your-frontend-domain.com
 FRONTEND_URL=http://localhost:3000
+
+# Rate limiting: requests per minute per IP address
+# Applies to retirement endpoints to prevent abuse
+# Recommended: 10 for production, higher for development
 RATE_LIMIT_REQUESTS=10
 
-# Transaction Monitoring
+# =============================================================================
+# TRANSACTION MONITORING
+# =============================================================================
+# Timeout for blockchain transaction confirmation (minutes)
+# How long to wait for payment transactions to be confirmed
 TX_TIMEOUT_MINUTES=5
+
+# Timeout for allowance reservations (minutes)
+# Reserved allowances are released back to available after this time
+# Should be longer than typical payment completion time
 RESERVATION_TIMEOUT_MINUTES=15
 
-# Pricing
+# =============================================================================
+# PRICING CONFIGURATION
+# =============================================================================
+# Price per carbon allowance in USD
+# Used for calculating ETH/USDC payment amounts via 1inch
 ALLOWANCE_PRICE_USD=24.0
 
-# 1inch API
+# =============================================================================
+# EXTERNAL API CONFIGURATION
+# =============================================================================
+# 1inch API URL for Sepolia testnet
+# Used for getting ETH/USD exchange rates for payments
+# Sepolia chain ID: 11155111
 ONEINCH_API_URL=https://api.1inch.io/v5.0/11155111
+
+# =============================================================================
+# PRODUCTION-SPECIFIC CONFIGURATION
+# =============================================================================
+# Logging level for production (INFO, WARNING, ERROR)
+# Set to INFO or WARNING in production to reduce log noise
+LOG_LEVEL=INFO
+
+# Maximum number of database connections in pool
+# Adjust based on your database plan and expected load
+DB_POOL_SIZE=10
+
+# Enable/disable request logging for audit purposes
+# Set to true in production for compliance and security monitoring
+AUDIT_LOGGING_ENABLED=true
+
+# Sentry DSN for error tracking (optional)
+# Get from: https://sentry.io/
+# Leave empty to disable error tracking
+SENTRY_DSN=
+
+# =============================================================================
+# DEVELOPMENT-SPECIFIC CONFIGURATION
+# =============================================================================
+# These variables are only used in development mode (DEBUG=true)
+
+# Enable SQL query logging in development
+# Shows all database queries in logs (useful for debugging)
+DB_ECHO_QUERIES=false
+
+# Allow CORS from any origin in development
+# SECURITY: Never enable in production
+CORS_ALLOW_ALL_ORIGINS=false
