--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ black = "^23.11.0"
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
 pre-commit = "^3.6.0"
+bandit = "^1.7.5"
 
 [build-system]
 requires = ["poetry-core"]
