--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.0.0"
 slowapi = "^0.1.9"
 resend = "^0.7.0"
 httpx = "^0.25.2"
+apscheduler = "^3.11.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.7"
